--- a/contact-page.html
+++ b/contact-page.html
@@ -39,5 +39,6 @@
 </script>
 <!-- jQuery Custom Scroller CDN -->
 <script src="/js/include-html.js"></script>
+<script src="/js/header.js"></script>
 
 </html>
