fix commit code develop

--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,7 @@
                     </p>
                     <div class="button-center">
                         <button class="btn-footer btn-success">
-                            <span class="start-learning-now">START LEARNING NOW</span>
+                            <span class="start-learning-now">dấdasdasadsadSTART LEARNING NOW</span>
                         </button>
                     </div>
                 </div>
