--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <body style="background-color: #fdf6ea;">
         <div data-include="header.html" data-css="/css/header.css" data-js="/js/translate.js"></div>
         <div data-include="intro.html" data-css="/css/style-intro.css" data-js="/js/intro.js"></div>
-        <section style="padding-top: 400px;">
+        <div style="padding-top: 400px" data-include="upcoming.html" data-css="/css/upcoming.css" data-js="/js/upcoming.js"></div>
+        <section style="padding-top: 50px;">
                 <div class="ourprocess-container">
                         <div class="ourprocess-title">
                                 <h1>Our Process</h1>
