--- a/courses-template.html
+++ b/courses-template.html
@@ -606,7 +606,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 												class="wdt-logo-container"
 											  >
 												<a
-												  href="https://dtlmselementor.wpengine.com/"
+												  href="#"
 												  rel="home"
 												  ><img
 													loading="lazy"
@@ -3068,7 +3068,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
     <div class="main-title-section-container">
         <div class="container">
             <div class="main-title-section"><h1>Courses-Template</h1></div>
-            <div class="breadcrumb"><a href="https://dtlmselementor.wpengine.com/">Home</a><span class="breadcrumb-default-delimiter"></span><span class="current">Courses-Template</span></div>        </div>
+            <div class="breadcrumb"><a href="#">Home</a><span class="breadcrumb-default-delimiter"></span><span class="current">Courses-Template</span></div>        </div>
     </div>
     <div class="main-title-section-bg"></div>
 </section>                <!-- ** Breadcrumb End ** -->
