--- a/teacher.html
+++ b/teacher.html
@@ -5561,7 +5561,7 @@
                                         class="wdt-logo-container"
                                       >
                                         <a
-                                          href="https://dtlmselementor.wpengine.com/"
+                                          href="#"
                                           rel="home"
                                           ><img
                                             loading="lazy"
@@ -8025,7 +8025,7 @@
               <div class="container">
                 <div class="main-title-section"><h1>Teachers</h1></div>
                 <div class="breadcrumb">
-                  <a href="https://dtlmselementor.wpengine.com/">Home</a
+                  <a href="#">Home</a
                   ><span class="breadcrumb-default-delimiter"></span
                   ><span class="current">Teachers</span>
                 </div>
