--- a/index.html
+++ b/index.html
@@ -5569,7 +5569,7 @@
                                         class="wdt-logo-container"
                                       >
                                         <a
-                                          href="https://dtlmselementor.wpengine.com/"
+                                          href="index.html"
                                           rel="home"
                                           ><img
                                             loading="lazy"
